<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/addClassFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddClassFragment"
    tools:ignore="ExtraText,SmallSp">


    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!-- TITLE OF ADD CLASS FORM -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:layout_margin="10dp"
            android:text="@string/add_class_header"
            android:textSize="40sp" />

        <!-- ENTER CLASS NAME TEXT BOX -->
        <EditText
            android:id="@+id/enterClassName"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/enter_class_name"
            android:inputType="text"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:text=""
            android:textSize="30sp"
            tools:ignore="Autofill" />

        <!-- ENTER TEACHER NAME TEXTBOX -->
        <EditText
            android:id="@+id/enterTeacherName"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/enter_teacher_name"
            android:inputType="text"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:text=""
            android:textSize="30sp"
            tools:ignore="Autofill"
            />

        <!-- ENTER CLASS LOCATION TEXT BOX -->
        <EditText
            android:id="@+id/enterClassLocation"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/enter_class_location"
            android:inputType="text"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:text=""
            android:textSize="30sp"
            tools:ignore="Autofill" />

        <!-- SELECT CLASS DAYS -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:background="@drawable/border"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_marginStart="5dp"
                android:layout_gravity="center_vertical"
                android:text="@string/class_days"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp">
                <CheckBox
                    android:id="@+id/Monday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="M" />
                <CheckBox
                    android:id="@+id/Tuesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="T" />
                <CheckBox
                    android:id="@+id/Wendesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="W" />
                <CheckBox
                    android:id="@+id/Thursday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="R" />
                <CheckBox
                    android:id="@+id/Friday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:paddingEnd="5dp"
                    android:text="F" />
            </LinearLayout>
        </LinearLayout>

        <!-- SELECT TIME OF CLASS -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="Class start time: "
                    android:layout_margin="5dp"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/SelectedTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/startTime"
                    android:layout_centerInParent="true"
                    android:layout_margin="5dp"
                    android:gravity="center"

                    android:text="Time"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <!--on below line we are creating a
                button for date picker-->
            <Button
                android:id="@+id/startTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="20dp"
                android:background="@color/black"
                android:text="Pick Time"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@drawable/border"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Class end time: "
                android:layout_margin="5dp"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/classEndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_gravity="center_horizontal"
                android:inputType="time" />
        </LinearLayout>
        <!-- SELECT CLASS COLOR -->


    </LinearLayout>
    <Button
        android:id="@+id/submitClass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_gravity="bottom|end"
        android:layout_centerHorizontal="true" />




</androidx.coordinatorlayout.widget.CoordinatorLayout>